[package]
name = "tracking"
version = "0.1.0"
edition = "2021"

[dependencies]
rusqlite = "0.29.0"
json = "0.12.4"
lazy_static = "1.4.0"
chrono = "0.4.31"
clap = { version = "4.4.6", features = ["derive"] }
plotters = "0.3.5"
rand = "0.8"
num-traits = "0.2"
tokio = { version = "1.32.0", features = ["rt", "macros", "time"] }
